<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/padding_16"
    android:paddingRight="@dimen/padding_16"
    android:paddingBottom="@dimen/padding_16">

    <ImageView
        android:id="@+id/episodePoster"
        android:layout_width="248dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_magicians_episode" />

    <TextView
        android:id="@+id/episodeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32"
        android:text="@string/placeholder_episode_name"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/episodePoster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/episodeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/placeholder_episode_description"
        android:textColor="@color/colorLightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/episodePoster"
        app:layout_constraintTop_toBottomOf="@+id/episodeName" />

    <TextView
        android:id="@+id/episodeYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/placeholder_episode_year"
        android:textColor="@color/colorLightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/episodePoster"
        app:layout_constraintTop_toBottomOf="@+id/episodeDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>