<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBackground"
    android:clipToPadding="true">

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_magicians_preview" />

    <TextView
        android:id="@+id/movieDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/placeholder_seasons"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/ageTextView"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/posterImageView" />

    <TextView
        android:id="@+id/imagesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/text_footage"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/movieDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/movieDescriptionTextView" />

    <TextView
        android:id="@+id/episodesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/text_episodes"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imagesRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/imagesRecyclerView" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/text_restriction"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/movieDescriptionTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagesRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imagesTextView"
        app:layout_constraintTop_toBottomOf="@+id/imagesTextView"
        tools:itemCount="10"
        tools:listitem="@layout/item_film_landscape" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/episodesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/posterImageView"
        app:layout_constraintTop_toBottomOf="@+id/episodesTextView"
        tools:listitem="@layout/item_episode" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/gradient_bottom"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/posterImageView"
        app:layout_constraintEnd_toEndOf="@+id/posterImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/posterImageView" />
    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/gradient_top"
        app:layout_constraintBottom_toBottomOf="@+id/posterImageView"
        app:layout_constraintEnd_toEndOf="@+id/posterImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/posterImageView" />
</androidx.constraintlayout.widget.ConstraintLayout>