<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_logo" />

    <Button
        android:id="@+id/buttonLoginAction"
        android:layout_width="0dp"
        android:layout_height="@dimen/control_height"
        android:layout_marginStart="@dimen/margin_128"
        android:layout_marginEnd="@dimen/margin_128"
        android:background="@drawable/background_orange"
        android:text="@string/action_login"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/main_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_128"
        android:layout_marginEnd="@dimen/margin_128"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoginAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_height"
            android:layout_marginBottom="@dimen/margin_16"
            android:background="@drawable/background_black"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorLightGray"
            app:layout_constraintBottom_toTopOf="@+id/editTextTexPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTexPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_height"
            android:background="@drawable/background_black"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorLightGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>